<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llAccountTaskList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/layout_padding_8dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/layout_padding_8dp"
                android:padding="@dimen/layout_padding_16dp"
                android:text="@string/tasks"
                android:textColor="@color/gray_dark"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/grey_500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding_16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llAccountTask"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivAccountTask"
                        style="@style/circleLayout"
                        android:layout_width="@dimen/layout_padding_50dp"
                        android:layout_height="@dimen/layout_padding_50dp"
                        app:srcCompat="@drawable/ic_lock_black_24dp" />

                    <TextView
                        android:id="@+id/tvAccountTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/layout_padding_8dp"
                        android:textSize="@dimen/text_medium"
                        tools:text="Lock" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llAccountTask2"
                    android:layout_marginStart="@dimen/layout_padding_16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/ivAccountTask2"
                        style="@style/circleLayout"
                        android:layout_width="@dimen/layout_padding_50dp"
                        android:layout_height="@dimen/layout_padding_50dp"
                        app:srcCompat="@drawable/ic_lock_black_24dp" />

                    <TextView
                        android:id="@+id/tvAccountTask2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/layout_padding_8dp"
                        android:textSize="@dimen/text_medium"
                        tools:text="Lock" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAccountTaskForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding_16dp">

                <TextView
                    android:id="@+id/tvAccountTaskHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/layout_padding_8dp"
                    android:text="@string/tasks"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAccountTaskSubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/layout_padding_8dp"
                    android:text="@string/please_verify_following_task"
                    android:textSize="@dimen/text_size_14sp" />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/layout_padding_16dp"
                android:paddingEnd="@dimen/layout_padding_16dp"
                android:paddingRight="@dimen/layout_padding_16dp">

                <EditText
                    android:id="@+id/etCommentAccountTasks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_comment_here"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_padding_8dp"
            android:layout_marginBottom="@dimen/layout_padding_8dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding_16dp">

            <Button
                android:id="@+id/btnCancelAccountTasks"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/layout_padding_8dp"
                android:layout_marginRight="@dimen/layout_padding_8dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_14sp" />

            <Button
                android:id="@+id/btnSubmitAccountTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tasks"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



