<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:openDrawer="start">

    <LinearLayout
        style="@style/LinearLayout.Base">
...
        <FrameLayout
            style="@style/FrameLayout.Container" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:fitsSystemWindows="true"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        app:headerLayout="@layout/layout_nav_header"
        app:menu="@menu/menu_navigation_drawer"/>

...
