...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAccount"
            android:layout_centerHorizontal="true"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/layout_padding_30dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
