...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/identifier"
                        android:textColor="@color/gray_dark" />

                    <TextView
                        android:id="@+id/tvIdentifier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_padding_8dp"
                        android:textColor="@color/black"
                        tools:text="@string/medium_text" />

...
                        android:layout_marginTop="@dimen/layout_padding_16dp"
                        android:text="@string/group_id"
                        android:textColor="@color/gray_dark" />


                    <TextView
                        android:id="@+id/tvGroupId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_padding_8dp"
                        android:textColor="@color/black"
                        tools:text="@string/medium_text" />

...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_padding_16dp"
                        android:text="@string/name"
                        android:textColor="@color/gray_dark" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_padding_8dp"
                        android:textColor="@color/black"
                        tools:text="@string/medium_text" />

...
