<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGroups"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_padding_16dp"
        app:layout_anchor="@id/rvGroups"
        app:layout_anchorGravity="bottom|right"
        app:layout_behavior="org.apache.fineract.utils.ScrollFabBehavior"
        app:srcCompat="@drawable/ic_add_white_48dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>