...
        <item
            android:id="@+id/item_product"
            android:icon="@drawable/ic_products_black_24dp"
            android:title="@string/products" />

        <item
            android:id="@+id/item_groups"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/groups" />

        <item
            android:id="@+id/item_location"
            android:icon="@drawable/ic_baseline_location_on_24"
...
